fixed horizontal scrolling issue

--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,7 @@
 body{
 	background-color: #FCFCFC;
 	font-family: 'Nunito', sans-serif;
-	margin: 3rem;
+	margin: 2rem;
 }
 
 h1 {
@@ -52,8 +52,14 @@ line-height: 45px;
 background: none;
 /*margin-bottom: 0; */
 /*max-width: 1256px; */
+padding-left:1.5rem;
+padding-right:1.5rem;
 }
 
 .top-bar ul {
     background-color: transparent;        
+}
+
+.column{
+	padding:0;
 }
